<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/text_laout"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/hello_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there"
            android:textColor="@color/big_text_color"
            android:textSize="35sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/have_we_meet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/hello_there_des"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_laout"
        android:orientation="horizontal">
        <Button
            android:id="@+id/not_yet_in_hellow_page"
            android:background="@drawable/rectangular_shape"
            android:layout_marginLeft="30dp"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:text="@string/not_yet"/>
        <Button
            android:id="@+id/yes_hello_page"
            android:background="@drawable/rectangular_shape"
            android:layout_marginLeft="40dp"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:text="@string/yes"/>

    </LinearLayout>
    </RelativeLayout>