<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/text_laout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/demo_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/great"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lets_start"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:gravity=""
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password"
            android:hint="password"
            android:inputType="numberPassword"/>
        <Button
            android:background="@drawable/rectangular_shape"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/done"/>

    </LinearLayout>
</RelativeLayout>