<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/welcome_login"
        android:id="@+id/demo_image"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/text_laout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/demo_image">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/big_text_color"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_enter_details"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/email_id_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="email"
            android:inputType="textEmailAddress"

            />
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password_login"
            android:hint="password"/>

        <Button
            android:id="@+id/login_button"
            android:background="@drawable/rectangular_shape"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/login"/>


    </LinearLayout>
    <RelativeLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/text_laout"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebok_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <Button
            android:layout_toRightOf="@+id/facebok_login_button"
            android:id="@+id/forget_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangular_shape"
            android:text="@string/forget"
            android:layout_marginLeft="5dp"/>

    </RelativeLayout>

</RelativeLayout>






