<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar_in_profile_page"/>/>
    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/all_info_layout"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
<RelativeLayout
    android:id="@+id/basic_info_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">
    <ImageView
        android:layout_centerVertical="true"
        android:id="@+id/basic_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/app_logo"
        />
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/basic_imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/basic_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_basic_info"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:layout_below="@+id/basic_info_title"
        android:id="@+id/basic_info_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/easy_manage" />
    </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/basic_info_layout"
        android:id="@+id/personal_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/personal_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/app_logo"
            />
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/personal_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_personal_info"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_below="@+id/personal_info_title"
                android:id="@+id/personal_info_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/easy_description" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/personal_info_layout"
        android:id="@+id/medication_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/medication_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/app_logo" />
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/medication_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/medication_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_medications"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_below="@+id/basic_info_title"
                android:id="@+id/medication_info_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/easy_manage" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/medication_info_layout"
        android:id="@+id/allergies_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/allergies_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/app_logo" />
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/allergies_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/allergies_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_allergies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_below="@+id/basic_info_title"
                android:id="@+id/allergies_info_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/easy_description" />
        </LinearLayout>

    </RelativeLayout>



        </RelativeLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/hearts_imageView_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/app_logo"
            android:visibility="gone"
            />

    </LinearLayout>
</RelativeLayout>